# mhw-radar

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  build-release.bat  package.json
.claude/: CLAUDE.md
engine/: Cargo.toml
engine/src/: game_data.rs  ipc.rs  log.rs  main.rs  memory.rs  monster_scanner.rs  overlay.rs  reader.rs  target_selector.rs  types.rs
engine/src/data/: monster_091.json  monster_101.json  monster_ai_addresses.json  monster_names.json  quest_names.json
logs/: 2026-05-17_19-05-48.txt
panel-ui/: index.html  package-lock.json  package.json
panel-ui/src/: App.tsx  api.ts  constants.ts  main.tsx  types.ts
panel-ui/src-tauri/: Cargo.toml  tauri.conf.json
panel-ui/src-tauri/capabilities/: default.json
panel-ui/src-tauri/src/: main.rs
panel-ui/src/components/: HeaderBar.tsx  LogSection.tsx  LogoImage.tsx  NavButton.tsx  OpacitySection.tsx  Sidebar.tsx  ToggleSection.tsx
panel-ui/src/constants/: api.ts  format.ts  highlights.ts  index.ts  theme.ts  toggles.ts
panel-ui/src/features/: ConnectionDiagnostics.tsx  LogAnalysisSection.tsx  LogSection.tsx  OpacitySection.tsx  SoftwareUpdatesSection.tsx  ToggleSection.tsx  UpdateBanner.tsx  UsageGuideSection.tsx
panel-ui/src/hooks/: useApi.ts  useLogExport.ts  useQuestTimer.ts  useScrollSpy.ts  useUpdateChecker.ts
panel-ui/src/layouts/: HeaderBar.tsx  MainLayout.tsx  SectionWrapper.tsx  Sidebar.tsx  StatusBar.tsx
panel-ui/src/ui/: Card.tsx  SectionHeader.tsx
panel-ui/src/utils/: api.ts  url.ts  version.ts
scripts/: package.mjs  sync-version.mjs
updater/: Cargo.toml
updater/src/: main.rs
